Footer Bug Fix
The Footer would cover up the create and back to list icon when creating stuff

--- a/StJosephBazaar/Pages/Shared/_Layout.cshtml.css
+++ b/StJosephBazaar/Pages/Shared/_Layout.cshtml.css
@@ -51,8 +51,8 @@ button.accept-policy {
 }
 
 #logo{
-  height: 60%;
-  width: 50%;
+  height: 70%;
+  width: 60%;
 }
 
 #blank{
